--- a/Forex/Forex.csproj
+++ b/Forex/Forex.csproj
@@ -5,6 +5,138 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="bin\Release\publish\appsettings.Development.json" />
+    <Content Include="bin\Release\publish\appsettings.json" />
+    <Content Include="bin\Release\publish\appsettings.production.json" />
+    <Content Include="bin\Release\publish\Forex.deps.json" />
+    <Content Include="bin\Release\publish\Forex.runtimeconfig.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="bin\Release\publish\cs\Microsoft.CodeAnalysis.CSharp.resources.dll" />
+    <None Include="bin\Release\publish\cs\Microsoft.CodeAnalysis.CSharp.Workspaces.resources.dll" />
+    <None Include="bin\Release\publish\cs\Microsoft.CodeAnalysis.resources.dll" />
+    <None Include="bin\Release\publish\cs\Microsoft.CodeAnalysis.Workspaces.resources.dll" />
+    <None Include="bin\Release\publish\de\Microsoft.CodeAnalysis.CSharp.resources.dll" />
+    <None Include="bin\Release\publish\de\Microsoft.CodeAnalysis.CSharp.Workspaces.resources.dll" />
+    <None Include="bin\Release\publish\de\Microsoft.CodeAnalysis.resources.dll" />
+    <None Include="bin\Release\publish\de\Microsoft.CodeAnalysis.Workspaces.resources.dll" />
+    <None Include="bin\Release\publish\dotnet-aspnet-codegenerator-design.dll" />
+    <None Include="bin\Release\publish\EFSQLScripts\Forex.Models.UserContext.sql" />
+    <None Include="bin\Release\publish\es\Microsoft.CodeAnalysis.CSharp.resources.dll" />
+    <None Include="bin\Release\publish\es\Microsoft.CodeAnalysis.CSharp.Workspaces.resources.dll" />
+    <None Include="bin\Release\publish\es\Microsoft.CodeAnalysis.resources.dll" />
+    <None Include="bin\Release\publish\es\Microsoft.CodeAnalysis.Workspaces.resources.dll" />
+    <None Include="bin\Release\publish\Forex.dll" />
+    <None Include="bin\Release\publish\Forex.exe" />
+    <None Include="bin\Release\publish\Forex.pdb" />
+    <None Include="bin\Release\publish\fr\Microsoft.CodeAnalysis.CSharp.resources.dll" />
+    <None Include="bin\Release\publish\fr\Microsoft.CodeAnalysis.CSharp.Workspaces.resources.dll" />
+    <None Include="bin\Release\publish\fr\Microsoft.CodeAnalysis.resources.dll" />
+    <None Include="bin\Release\publish\fr\Microsoft.CodeAnalysis.Workspaces.resources.dll" />
+    <None Include="bin\Release\publish\it\Microsoft.CodeAnalysis.CSharp.resources.dll" />
+    <None Include="bin\Release\publish\it\Microsoft.CodeAnalysis.CSharp.Workspaces.resources.dll" />
+    <None Include="bin\Release\publish\it\Microsoft.CodeAnalysis.resources.dll" />
+    <None Include="bin\Release\publish\it\Microsoft.CodeAnalysis.Workspaces.resources.dll" />
+    <None Include="bin\Release\publish\ja\Microsoft.CodeAnalysis.CSharp.resources.dll" />
+    <None Include="bin\Release\publish\ja\Microsoft.CodeAnalysis.CSharp.Workspaces.resources.dll" />
+    <None Include="bin\Release\publish\ja\Microsoft.CodeAnalysis.resources.dll" />
+    <None Include="bin\Release\publish\ja\Microsoft.CodeAnalysis.Workspaces.resources.dll" />
+    <None Include="bin\Release\publish\ko\Microsoft.CodeAnalysis.CSharp.resources.dll" />
+    <None Include="bin\Release\publish\ko\Microsoft.CodeAnalysis.CSharp.Workspaces.resources.dll" />
+    <None Include="bin\Release\publish\ko\Microsoft.CodeAnalysis.resources.dll" />
+    <None Include="bin\Release\publish\ko\Microsoft.CodeAnalysis.Workspaces.resources.dll" />
+    <None Include="bin\Release\publish\Microsoft.AspNetCore.Razor.Language.dll" />
+    <None Include="bin\Release\publish\Microsoft.Bcl.AsyncInterfaces.dll" />
+    <None Include="bin\Release\publish\Microsoft.CodeAnalysis.CSharp.dll" />
+    <None Include="bin\Release\publish\Microsoft.CodeAnalysis.CSharp.Workspaces.dll" />
+    <None Include="bin\Release\publish\Microsoft.CodeAnalysis.dll" />
+    <None Include="bin\Release\publish\Microsoft.CodeAnalysis.Razor.dll" />
+    <None Include="bin\Release\publish\Microsoft.CodeAnalysis.Workspaces.dll" />
+    <None Include="bin\Release\publish\Microsoft.Data.SqlClient.dll" />
+    <None Include="bin\Release\publish\Microsoft.EntityFrameworkCore.Abstractions.dll" />
+    <None Include="bin\Release\publish\Microsoft.EntityFrameworkCore.dll" />
+    <None Include="bin\Release\publish\Microsoft.EntityFrameworkCore.Relational.dll" />
+    <None Include="bin\Release\publish\Microsoft.EntityFrameworkCore.SqlServer.dll" />
+    <None Include="bin\Release\publish\Microsoft.Extensions.Caching.Abstractions.dll" />
+    <None Include="bin\Release\publish\Microsoft.Extensions.Caching.Memory.dll" />
+    <None Include="bin\Release\publish\Microsoft.Extensions.Configuration.Abstractions.dll" />
+    <None Include="bin\Release\publish\Microsoft.Extensions.DependencyInjection.Abstractions.dll" />
+    <None Include="bin\Release\publish\Microsoft.Extensions.DependencyInjection.dll" />
+    <None Include="bin\Release\publish\Microsoft.Extensions.Logging.Abstractions.dll" />
+    <None Include="bin\Release\publish\Microsoft.Extensions.Logging.dll" />
+    <None Include="bin\Release\publish\Microsoft.Extensions.Options.dll" />
+    <None Include="bin\Release\publish\Microsoft.Extensions.Primitives.dll" />
+    <None Include="bin\Release\publish\Microsoft.Identity.Client.dll" />
+    <None Include="bin\Release\publish\Microsoft.IdentityModel.JsonWebTokens.dll" />
+    <None Include="bin\Release\publish\Microsoft.IdentityModel.Logging.dll" />
+    <None Include="bin\Release\publish\Microsoft.IdentityModel.Protocols.dll" />
+    <None Include="bin\Release\publish\Microsoft.IdentityModel.Protocols.OpenIdConnect.dll" />
+    <None Include="bin\Release\publish\Microsoft.IdentityModel.Tokens.dll" />
+    <None Include="bin\Release\publish\Microsoft.VisualStudio.Web.CodeGeneration.Contracts.dll" />
+    <None Include="bin\Release\publish\Microsoft.VisualStudio.Web.CodeGeneration.Core.dll" />
+    <None Include="bin\Release\publish\Microsoft.VisualStudio.Web.CodeGeneration.dll" />
+    <None Include="bin\Release\publish\Microsoft.VisualStudio.Web.CodeGeneration.EntityFrameworkCore.dll" />
+    <None Include="bin\Release\publish\Microsoft.VisualStudio.Web.CodeGeneration.Templating.dll" />
+    <None Include="bin\Release\publish\Microsoft.VisualStudio.Web.CodeGeneration.Utils.dll" />
+    <None Include="bin\Release\publish\Microsoft.VisualStudio.Web.CodeGenerators.Mvc.dll" />
+    <None Include="bin\Release\publish\Newtonsoft.Json.Bson.dll" />
+    <None Include="bin\Release\publish\Newtonsoft.Json.dll" />
+    <None Include="bin\Release\publish\NuGet.Frameworks.dll" />
+    <None Include="bin\Release\publish\pl\Microsoft.CodeAnalysis.CSharp.resources.dll" />
+    <None Include="bin\Release\publish\pl\Microsoft.CodeAnalysis.CSharp.Workspaces.resources.dll" />
+    <None Include="bin\Release\publish\pl\Microsoft.CodeAnalysis.resources.dll" />
+    <None Include="bin\Release\publish\pl\Microsoft.CodeAnalysis.Workspaces.resources.dll" />
+    <None Include="bin\Release\publish\pt-BR\Microsoft.CodeAnalysis.CSharp.resources.dll" />
+    <None Include="bin\Release\publish\pt-BR\Microsoft.CodeAnalysis.CSharp.Workspaces.resources.dll" />
+    <None Include="bin\Release\publish\pt-BR\Microsoft.CodeAnalysis.resources.dll" />
+    <None Include="bin\Release\publish\pt-BR\Microsoft.CodeAnalysis.Workspaces.resources.dll" />
+    <None Include="bin\Release\publish\runtimes\unix\lib\netcoreapp3.1\Microsoft.Data.SqlClient.dll" />
+    <None Include="bin\Release\publish\runtimes\win-arm64\native\Microsoft.Data.SqlClient.SNI.dll" />
+    <None Include="bin\Release\publish\runtimes\win-arm64\native\Microsoft.Data.SqlClient.SNI.pdb" />
+    <None Include="bin\Release\publish\runtimes\win-arm\native\Microsoft.Data.SqlClient.SNI.dll" />
+    <None Include="bin\Release\publish\runtimes\win-arm\native\Microsoft.Data.SqlClient.SNI.pdb" />
+    <None Include="bin\Release\publish\runtimes\win-x64\native\Microsoft.Data.SqlClient.SNI.dll" />
+    <None Include="bin\Release\publish\runtimes\win-x64\native\Microsoft.Data.SqlClient.SNI.pdb" />
+    <None Include="bin\Release\publish\runtimes\win-x86\native\Microsoft.Data.SqlClient.SNI.dll" />
+    <None Include="bin\Release\publish\runtimes\win-x86\native\Microsoft.Data.SqlClient.SNI.pdb" />
+    <None Include="bin\Release\publish\runtimes\win\lib\netcoreapp3.1\Microsoft.Data.SqlClient.dll" />
+    <None Include="bin\Release\publish\runtimes\win\lib\netstandard2.0\System.Runtime.Caching.dll" />
+    <None Include="bin\Release\publish\runtimes\win\lib\netstandard2.0\System.Security.Cryptography.ProtectedData.dll" />
+    <None Include="bin\Release\publish\ru\Microsoft.CodeAnalysis.CSharp.resources.dll" />
+    <None Include="bin\Release\publish\ru\Microsoft.CodeAnalysis.CSharp.Workspaces.resources.dll" />
+    <None Include="bin\Release\publish\ru\Microsoft.CodeAnalysis.resources.dll" />
+    <None Include="bin\Release\publish\ru\Microsoft.CodeAnalysis.Workspaces.resources.dll" />
+    <None Include="bin\Release\publish\System.Collections.Immutable.dll" />
+    <None Include="bin\Release\publish\System.ComponentModel.Annotations.dll" />
+    <None Include="bin\Release\publish\System.Composition.AttributedModel.dll" />
+    <None Include="bin\Release\publish\System.Composition.Convention.dll" />
+    <None Include="bin\Release\publish\System.Composition.Hosting.dll" />
+    <None Include="bin\Release\publish\System.Composition.Runtime.dll" />
+    <None Include="bin\Release\publish\System.Composition.TypedParts.dll" />
+    <None Include="bin\Release\publish\System.Configuration.ConfigurationManager.dll" />
+    <None Include="bin\Release\publish\System.Diagnostics.DiagnosticSource.dll" />
+    <None Include="bin\Release\publish\System.IdentityModel.Tokens.Jwt.dll" />
+    <None Include="bin\Release\publish\System.Net.Http.Formatting.dll" />
+    <None Include="bin\Release\publish\System.Runtime.Caching.dll" />
+    <None Include="bin\Release\publish\System.Security.Cryptography.ProtectedData.dll" />
+    <None Include="bin\Release\publish\System.Web.Http.dll" />
+    <None Include="bin\Release\publish\tr\Microsoft.CodeAnalysis.CSharp.resources.dll" />
+    <None Include="bin\Release\publish\tr\Microsoft.CodeAnalysis.CSharp.Workspaces.resources.dll" />
+    <None Include="bin\Release\publish\tr\Microsoft.CodeAnalysis.resources.dll" />
+    <None Include="bin\Release\publish\tr\Microsoft.CodeAnalysis.Workspaces.resources.dll" />
+    <None Include="bin\Release\publish\web.config" />
+    <None Include="bin\Release\publish\zh-Hans\Microsoft.CodeAnalysis.CSharp.resources.dll" />
+    <None Include="bin\Release\publish\zh-Hans\Microsoft.CodeAnalysis.CSharp.Workspaces.resources.dll" />
+    <None Include="bin\Release\publish\zh-Hans\Microsoft.CodeAnalysis.resources.dll" />
+    <None Include="bin\Release\publish\zh-Hans\Microsoft.CodeAnalysis.Workspaces.resources.dll" />
+    <None Include="bin\Release\publish\zh-Hant\Microsoft.CodeAnalysis.CSharp.resources.dll" />
+    <None Include="bin\Release\publish\zh-Hant\Microsoft.CodeAnalysis.CSharp.Workspaces.resources.dll" />
+    <None Include="bin\Release\publish\zh-Hant\Microsoft.CodeAnalysis.resources.dll" />
+    <None Include="bin\Release\publish\zh-Hant\Microsoft.CodeAnalysis.Workspaces.resources.dll" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.7" />
     <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="5.0.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.2">
