--- a/Forex/appsettings.json
+++ b/Forex/appsettings.json
@@ -1,7 +1,8 @@
 {
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DevConnection": "Server=.\\SQLExpress;Database=Forex;Trusted_Connection=True;MultipleActiveResultSets=True"
+    "DevConnection": "Server=.\\SQLExpress;Database=Forex;Trusted_Connection=true;MultipleActiveResultSets=True;"
+    /*"Server=ms-sql-server,1433\\SQLExpress;Database=Forex;User=SA;Password=test@123;MultipleActiveResultSets=True;TrustServerCertificate=true"*/
   },
   "Logging": {
     "LogLevel": {
